syntax = "proto3";

//package go.micro.srv.user;
option go_package = "./user";

service UserService {
  rpc Create(User) returns (UserResponse) {}
  rpc Get(User) returns (UserResponse) {}
  rpc GetAll(UserRequest) returns (UserResponse) {}
  rpc Auth(User) returns (Token) {}
  rpc ValidateToken(Token) returns (Token) {}
}

message User {
  string id = 1;
  string name = 2;
  string company = 3;
  string email = 4;
  string password = 5;
}

message UserRequest {}

message UserResponse {
  User user = 1;
  repeated User users = 2;
  repeated Error errors = 3;
}

message Token {
  string token = 1;
  bool valid = 2;
  repeated Error errors = 3;
}

message Error {
  int32 code = 1;
  string description = 2;
}